lazy load integrated to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@ js: "/js/portfolio.js"
                     <div class="grid-sizer"></div>
                     <div class="portfolio-item tall mobile">
                         <a class="popup-link" href="/portfolio/moy_koshelek.png" title="Мой кошелек">
-                            <img src="/portfolio/moy_koshelek.png" alt="">
+                            <img  src="/img/blurryback.jpg" data-src="/portfolio/moy_koshelek.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Мой кошелек</h3>
                                 <div class="portfolio-descr">
@@ -36,8 +36,8 @@ js: "/js/portfolio.js"
                         </a>
                     </div>
                     <div class="portfolio-item web mobile">
-                        <a class="popup-link" href="/portfolio/afex_android.png" title="Afex - online store">
-                            <img src="/portfolio/afex_android.png" alt="">
+                        <a class="popup-link" href="/portfolio/afex_android.png" title="Afex - online store (android)">
+                            <img  src="/img/blurryback.jpg" data-src="/portfolio/afex_android.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
@@ -47,8 +47,8 @@ js: "/js/portfolio.js"
                         </a>
                     </div>
                     <div class="portfolio-item web">
-                        <a class="popup-link" href="/portfolio/afex_new.png" title="Afex - online store">
-                            <img src="/portfolio/afex_new.png" alt="">
+                        <a class="popup-link" href="/portfolio/afex_new.png" title="Afex - online store (web, latest)">
+                            <img  src="/img/blurryback.jpg" data-src="/portfolio/afex_new.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
@@ -59,7 +59,7 @@ js: "/js/portfolio.js"
                     </div>
                     <div class="portfolio-item mobile">
                         <a class="popup-link" href="/portfolio/ya_calendar.png" title="Yandex calendar">
-                            <img src="/portfolio/ya_calendar.png" alt="">
+                            <img  src="/img/blurryback.jpg" data-src="/portfolio/ya_calendar.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Yandex calendar</h3>
                                 <div class="portfolio-descr">
@@ -70,7 +70,7 @@ js: "/js/portfolio.js"
                     </div>
                     <div class="portfolio-item mobile">
                         <a class="popup-link" href="/portfolio/kakadu.png" title="Kakadu taxipay">
-                            <img src="/portfolio/kakadu.png" alt="">
+                            <img  src="/img/blurryback.jpg" data-src="/portfolio/kakadu.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Kakadu taxipay</h3>
                                 <div class="portfolio-descr">
@@ -81,7 +81,7 @@ js: "/js/portfolio.js"
                     </div>
                     <div class="portfolio-item wide web">
                         <a class="popup-link" href="/portfolio/towork.png" title="Towork.uz website">
-                            <img src="/portfolio/towork.png" alt="">
+                            <img  src="/img/blurryback.jpg" data-src="/portfolio/towork.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Towork.uz website</h3>
                                 <div class="portfolio-descr">
@@ -91,8 +91,8 @@ js: "/js/portfolio.js"
                         </a>
                     </div>
                     <div class="portfolio-item wide-tall web">
-                        <a class="popup-link" href="/portfolio/afex_old.png" title="Afex - online store">
-                            <img src="/portfolio/afex_old.png" alt="">
+                        <a class="popup-link" href="/portfolio/afex_old.png" title="Afex - online store (web, old)">
+                            <img  src="/img/blurryback.jpg" data-src="/portfolio/afex_old.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
@@ -102,8 +102,8 @@ js: "/js/portfolio.js"
                         </a>
                     </div>
                     <div class="portfolio-item web mobile">
-                        <a class="popup-link" href="/portfolio/afex_old_mobile.png" title="Afex - online store">
-                            <img src="/portfolio/afex_old_mobile.png" alt="">
+                        <a class="popup-link" href="/portfolio/afex_old_mobile.png" title="Afex - online store (web mobile, old)">
+                            <img  src="/img/blurryback.jpg" data-src="/portfolio/afex_old_mobile.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
@@ -113,8 +113,8 @@ js: "/js/portfolio.js"
                         </a>
                     </div>
                     <div class="portfolio-item web mobile">
-                        <a class="popup-link" href="/portfolio/afex_new_mobile.png" title="Afex - online store">
-                            <img src="/portfolio/afex_new_mobile.png" alt="">
+                        <a class="popup-link" href="/portfolio/afex_new_mobile.png" title="Afex - online store (web mobile, latest)">
+                            <img  src="/img/blurryback.jpg" data-src="/portfolio/afex_new_mobile.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
@@ -125,7 +125,7 @@ js: "/js/portfolio.js"
                     </div>
                     <div class="portfolio-item wide web">
                         <a class="popup-link" href="/portfolio/algo.jpg" title="Algo.ubtuit.uz">
-                            <img src="/portfolio/algo.jpg" alt="">
+                            <img  src="/img/blurryback.jpg" data-src="/portfolio/algo.jpg" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Algo.ubtuit.uz</h3>
                                 <div class="portfolio-descr">
