--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-subtitle: Portfolio and personal blog of Software Developer - Yura Sultonov
+subtitle: "Portfolio and personal blog of Software Developer - Yura Sultonov"
 use-site-title: true
 js: "/js/home.js"
 ---
