--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@ js: "/js/portfolio.js"
                     <div class="grid-sizer"></div>
                     <div class="portfolio-item tall mobile">
                         <a class="popup-link" href="/portfolio/moy_koshelek.png" title="Мой кошелек">
-                            <img  src="/img/blurryback.jpg" data-src="/portfolio/moy_koshelek.png" alt="">
+                            <img  src="/img/loader.svg" data-src="/portfolio/moy_koshelek.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Мой кошелек</h3>
                                 <div class="portfolio-descr">
@@ -37,7 +37,7 @@ js: "/js/portfolio.js"
                     </div>
                     <div class="portfolio-item web mobile">
                         <a class="popup-link" href="/portfolio/afex_android.png" title="Afex - online store (android)">
-                            <img  src="/img/blurryback.jpg" data-src="/portfolio/afex_android.png" alt="">
+                            <img  src="/img/loader.svg" data-src="/portfolio/afex_android.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
@@ -47,19 +47,19 @@ js: "/js/portfolio.js"
                         </a>
                     </div>
                     <div class="portfolio-item web">
-                        <a class="popup-link" href="/portfolio/afex_new.png" title="Afex - online store (web, latest)">
-                            <img  src="/img/blurryback.jpg" data-src="/portfolio/afex_new.png" alt="">
+                        <a class="popup-link" href="/portfolio/kakadu.jpg" title="Kakadu - taxi pay">
+                            <img  src="/img/loader.svg" data-src="/portfolio/kakadu.jpg" alt="">
                             <div class="portfolio-caption ">
-                                <h3 class="portfolio-title">Afex - online store</h3>
+                                <h3 class="portfolio-title">Kakadu - taxi pay</h3>
                                 <div class="portfolio-descr">
-                                    New version of web store
+                                    Kakadu - an app for payment to taxi
                                 </div>
                             </div>
                         </a>
                     </div>
                     <div class="portfolio-item mobile">
                         <a class="popup-link" href="/portfolio/ya_calendar.png" title="Yandex calendar">
-                            <img  src="/img/blurryback.jpg" data-src="/portfolio/ya_calendar.png" alt="">
+                            <img  src="/img/loader.svg" data-src="/portfolio/ya_calendar.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Yandex calendar</h3>
                                 <div class="portfolio-descr">
@@ -70,7 +70,7 @@ js: "/js/portfolio.js"
                     </div>
                     <div class="portfolio-item mobile">
                         <a class="popup-link" href="/portfolio/kakadu.png" title="Kakadu taxipay">
-                            <img  src="/img/blurryback.jpg" data-src="/portfolio/kakadu.png" alt="">
+                            <img  src="/img/loader.svg" data-src="/portfolio/kakadu.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Kakadu taxipay</h3>
                                 <div class="portfolio-descr">
@@ -81,7 +81,7 @@ js: "/js/portfolio.js"
                     </div>
                     <div class="portfolio-item wide web">
                         <a class="popup-link" href="/portfolio/towork.png" title="Towork.uz website">
-                            <img  src="/img/blurryback.jpg" data-src="/portfolio/towork.png" alt="">
+                            <img  src="/img/loader.svg" data-src="/portfolio/towork.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Towork.uz website</h3>
                                 <div class="portfolio-descr">
@@ -92,7 +92,7 @@ js: "/js/portfolio.js"
                     </div>
                     <div class="portfolio-item wide-tall web">
                         <a class="popup-link" href="/portfolio/afex_old.png" title="Afex - online store (web, old)">
-                            <img  src="/img/blurryback.jpg" data-src="/portfolio/afex_old.png" alt="">
+                            <img  src="/img/loader.svg" data-src="/portfolio/afex_old.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
@@ -103,7 +103,7 @@ js: "/js/portfolio.js"
                     </div>
                     <div class="portfolio-item web mobile">
                         <a class="popup-link" href="/portfolio/afex_old_mobile.png" title="Afex - online store (web mobile, old)">
-                            <img  src="/img/blurryback.jpg" data-src="/portfolio/afex_old_mobile.png" alt="">
+                            <img  src="/img/loader.svg" data-src="/portfolio/afex_old_mobile.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
@@ -114,7 +114,7 @@ js: "/js/portfolio.js"
                     </div>
                     <div class="portfolio-item web mobile">
                         <a class="popup-link" href="/portfolio/afex_new_mobile.png" title="Afex - online store (web mobile, latest)">
-                            <img  src="/img/blurryback.jpg" data-src="/portfolio/afex_new_mobile.png" alt="">
+                            <img  src="/img/loader.svg" data-src="/portfolio/afex_new_mobile.png" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Afex - online store</h3>
                                 <div class="portfolio-descr">
@@ -125,11 +125,66 @@ js: "/js/portfolio.js"
                     </div>
                     <div class="portfolio-item wide web">
                         <a class="popup-link" href="/portfolio/algo.jpg" title="Algo.ubtuit.uz">
-                            <img  src="/img/blurryback.jpg" data-src="/portfolio/algo.jpg" alt="">
+                            <img  src="/img/loader.svg" data-src="/portfolio/algo.jpg" alt="">
                             <div class="portfolio-caption ">
                                 <h3 class="portfolio-title">Algo.ubtuit.uz</h3>
                                 <div class="portfolio-descr">
                                     Online judge
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-item wide app">
+                        <a class="popup-link" href="/portfolio/play_and_learn.jpg" title="Play and learn">
+                            <img  src="/img/loader.svg" data-src="/portfolio/play_and_learn.jpg" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">Play and learn</h3>
+                                <div class="portfolio-descr">
+                                    Game for learning english
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-item wide-tall web">
+                        <a class="popup-link" href="/portfolio/afex_new.png" title="Afex - online store (web, latest)">
+                            <img  src="/img/loader.svg" data-src="/portfolio/afex_new.png" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">Afex - online store</h3>
+                                <div class="portfolio-descr">
+                                    New version of web store
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-item mobile">
+                        <a class="popup-link" href="/portfolio/aviatime.jpg" title="AviaTime - air ticket app">
+                            <img  src="/img/loader.svg" data-src="/portfolio/aviatime.jpg" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">AviaTime</h3>
+                                <div class="portfolio-descr">
+                                    AviaTime - air ticket app
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-item mobile">
+                        <a class="popup-link" href="/portfolio/ussd_android.jpg" title="USSD Bonus - informer mobile operators (android)">
+                            <img  src="/img/loader.svg" data-src="/portfolio/ussd_android.jpg" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">USSD Bonus</h3>
+                                <div class="portfolio-descr">
+                                    USSD Bonus - informer mobile operators (android)
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="portfolio-item tall mobile">
+                        <a class="popup-link" href="/portfolio/ussd_ios.jpg" title="USSD Bonus - informer mobile operators (iOS)">
+                            <img  src="/img/loader.svg" data-src="/portfolio/ussd_ios.jpg" alt="">
+                            <div class="portfolio-caption ">
+                                <h3 class="portfolio-title">USSD Bonus</h3>
+                                <div class="portfolio-descr">
+                                    USSD Bonus - informer mobile operators (iOS)
                                 </div>
                             </div>
                         </a>
