change github page url, add new employment info

--- a/profile.html
+++ b/profile.html
@@ -52,7 +52,7 @@ use-site-title: true
                             </li>
                             <li>
                                 <div class="profile-icon"><i class="fa fab fa-github-square"></i></div>
-                                <div class="profile-intro"><b><a href="https://github.com/yura-sultonov">github.com/yura-sultonov</a></b></div>
+                                <div class="profile-intro"><b><a href="https://github.com/yura-sultonov">github.com/sultonov</a></b></div>
                             </li>
                             <li>
                                 <div class="profile-icon"><i class="fa fab fa-instagram"></i></div>
