--- a/employment.html
+++ b/employment.html
@@ -16,6 +16,47 @@ use-site-title: true
                     <div class="item">
                         <div class="col-sm-6">
                             <div class="box">
+                                April, 2019 - Present
+                                <div class="box-sub-title">
+                                    Research and Innovation Center at TUIT
+                                </div>
+                                (Tashkent, Uzbekistan)
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="box_dec">
+                                <h3>Software engineer and researcher</h3>
+                                <ul class="description">
+                                    <li>Machine Learning (Python)</li>
+                                    <li>Android development (Kotlin)</li>
+                                    <li>Web development (Java, PHP)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-sm-6">
+                            <div class="box">
+                                January, 2019 - Present
+                                <div class="box-sub-title">
+                                    Tashkent university of information technologies
+                                </div>
+                                (Tashkent, Uzbekistan)
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="box_dec">
+                                <h3>Software engineer</h3>
+                                <ul class="description">
+                                    <li>Android development (Java, Kotlin)</li>
+                                    <li>Web development (C#, PHP, Yii2, JS, HTML, CSS)</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-sm-6">
+                            <div class="box">
                                 October, 2018 - January, 2019
                                 <div class="box-sub-title">
                                     "Afex business solutions" LLC
