added new sciense articles

--- a/employment.html
+++ b/employment.html
@@ -16,6 +16,25 @@ use-site-title: true
                     <div class="item">
                         <div class="col-sm-6">
                             <div class="box">
+                                May, 2019 - Present
+                                <div class="box-sub-title">
+                                    IT Step Computer Academy, Tashkent branch
+                                </div>
+                                (Tashkent, Uzbekistan)
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="box_dec">
+                                <h3>Computer programming teacher</h3>
+                                <ul class="description">
+                                    <li>To teach courses C/C++</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-sm-6">
+                            <div class="box">
                                 April, 2019 - Present
                                 <div class="box-sub-title">
                                     Research and Innovation Center at TUIT
