--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: base
+title: "Welcome to"
 subtitle: "Portfolio and personal blog of Software Developer - Yura Sultonov"
-use-site-title: true
 js: "/js/home.js"
 ---
 <div id="home-page" class="page-container">
