--- a/education.html
+++ b/education.html
@@ -96,11 +96,31 @@ js: "/js/education.js"
             <h5 class="text-center">Science articles that published in the period of study.</h5>
             <div class="row">
                 <div class="col-md-3 certificate">
+                    <a href="/img/articles/samarqand.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/samarqand.jpg" alt="Динамика количества инцидентов информационной безопасности" title="Динамика количества инцидентов информационной безопасности">
+                        <p class="certificate-text">Динамика количества инцидентов информационной безопасности (page 171)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/teoriticheskie_osnovy_sistem_upravlenie_incidentami.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/matematika_muammolari.jpg" alt="Теоритическое основы построения и функционирования систем управление инцидентами информационной безопасности" title="Теоритическое основы построения и функционирования систем управление инцидентами информационной безопасности">
+                        <p class="certificate-text">Теоритическое основы построения и функционирования систем управление инцидентами информационной безопасности</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/harbiy_aloqa_tizimida_AKT.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/harbiy_aloqa_tizimida_AKT.jpg" alt="Архитектура централизованный базы данных инцидентов на основе рабочих процессов" title="Архитектура централизованный базы данных инцидентов на основе рабочих процессов">
+                        <p class="certificate-text">Архитектура централизованный базы данных инцидентов на основе рабочих процессов (page 97)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
                     <a href="/img/articles/moluch_229.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/moluch_229.jpg" alt="Применение инструментов форензики на пути к расследованию инцидентов" title="Применение инструментов форензики на пути к расследованию инцидентов">
                         <p class="certificate-text">Применение инструментов форензики на пути к расследованию инцидентов (page 1)</p>
                     </a>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/shk4.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/shk4.jpg" alt="Стили мышления в освоении технологий программирования в среднем образовательном учреждении" title="Стили мышления в освоении технологий программирования в среднем образовательном учреждении">
@@ -119,14 +139,14 @@ js: "/js/education.js"
                         <p class="certificate-text">Аналитические и логические стили мышления в изучении технологий программирования в вузах (page 25)</p>
                     </a>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/uch21vek_3_3_2016.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/uch21vek.jpg" alt="Роль таксономия Бенджамина Блума в обучении программированию" title="Роль таксономия Бенджамина Блума в обучении программированию">
                         <p class="certificate-text">Роль таксономия Бенджамина Блума в обучении программированию (page 48)</p>
                     </a>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/uch21vek_3_2_2016.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/uch21vek.jpg" alt="Функции компьютера и компьютеризованное обучение при изучении иностранного языка" title="Функции компьютера и компьютеризованное обучение при изучении иностранного языка">
@@ -145,14 +165,14 @@ js: "/js/education.js"
                         <p class="certificate-text">Талабаларга маълумотларни интеллектуал тахлили фанини ўқитишда “Data mining tools” ластурий тахминотларининг ўрни (page 268)</p>
                     </a>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/yosh_olimlar_konferensiyasi_2016_2_qism.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/yosh_olimlar_konferensiyasi_2016_2_qism.jpg" alt="Xопфилд нейрон тўри асосида тимсолларни таниб олиш масаласи дастурий таъминоти" title="Xопфилд нейрон тўри асосида тимсолларни таниб олиш масаласи дастурий таъминоти">
                         <p class="certificate-text">Xопфилд нейрон тўри асосида тимсолларни таниб олиш масаласи дастурий таъминоти (page 273)</p>
                     </a>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/yosh_olimlar_konferensiyasi_2016_1_qism.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/yosh_olimlar_konferensiyasi_2016_1_qism.jpg" alt="Talabalar bilimini baholashning o'ziga hos usuli" title="Talabalar bilimini baholashning o'ziga hos usuli">
@@ -171,14 +191,14 @@ js: "/js/education.js"
                         <p class="certificate-text">Капитал маблағларни корхоналараро оптимал тақсимлашни динамик усул дастурини яратиш (page 204)</p>
                     </a>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/tendensii_i_perspektivy_razvitiya_nauki.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/tendensii_i_perspektivy_razvitiya_nauki.jpg" alt="Dasturlash asoslari” fanidan masala yechish bosqichlarini o'qitish metodikasi" title="Dasturlash asoslari” fanidan masala yechish bosqichlarini o'qitish metodikasi">
                         <p class="certificate-text">“Dasturlash asoslari” fanidan masala yechish bosqichlarini o'qitish metodikasi (page 337)</p>
                     </a>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/URDU_barkamol_avlod_1.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/URDU_barkamol_avlod.jpg" alt="Tarixiy merosimizning bugungi kundagi qadri" title="Tarixiy merosimizning bugungi kundagi qadri">
