--- a/employment.html
+++ b/employment.html
@@ -16,6 +16,29 @@ use-site-title: true
                     <div class="item">
                         <div class="col-sm-6">
                             <div class="box">
+                                August, 2019 - Present
+                                <div class="box-sub-title">
+                                    Joint stock commercial bank «Agrobank»
+                                </div>
+                                (Tashkent, Uzbekistan)
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="box_dec">
+                                <h3>Software Architect</h3>
+                                <ul class="description">
+                                    <li>Work with other IT professionals</li>
+                                    <li>Utilize tools, technology and various methodologies</li>
+                                    <li>Manage all phases of development</li>
+                                    <li>Guide and train developers</li>
+                                    <li>Suggest and implement solutions</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-sm-6">
+                            <div class="box">
                                 May, 2019 - Present
                                 <div class="box-sub-title">
                                     IT Step Computer Academy, Tashkent branch
@@ -28,6 +51,7 @@ use-site-title: true
                                 <h3>Computer programming teacher</h3>
                                 <ul class="description">
                                     <li>To teach courses C/C++</li>
+                                    <li>To teach Arduino courses</li>
                                 </ul>
                             </div>
                         </div>
