new blog and updating profile phone number

--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@ use-site-title: true
                         <ul class="profile-data">
                             <li>
                                 <div class="profile-icon"><i class="fa fa-phone"></i></div>
-                                <div class="profile-intro"><b>Phone: </b>+998-(90)-979-00-58</div>
+                                <div class="profile-intro"><b>Phone: </b>+998-(97)-745-00-80</div>
                             </li>
                             <li>
                                 <div class="profile-icon"><i class="fa fa-envelope-open"></i></div>
@@ -60,12 +60,12 @@ use-site-title: true
                             </li>
                         </ul>
                     </div>
-                    <div class="col-xs-12 col-md-6">
-                        <a class="cv-btn" href="#"><i class="fa fa-download"></i> Download My CV</a>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <a class="cv-btn" href="mailto:sultonovyura@gmail.com"><i class="fa fa-handshake-o"></i> Hire Me Now</a>
-                    </div>
+<!--                    <div class="col-xs-12 col-md-6">-->
+<!--                        <a class="cv-btn" href="#"><i class="fa fa-download"></i> Download My CV</a>-->
+<!--                    </div>-->
+<!--                    <div class="col-xs-12 col-md-6">-->
+<!--                        <a class="cv-btn" href="mailto:sultonovyura@gmail.com"><i class="fa fa-handshake-o"></i> Hire Me Now</a>-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
