--- a/employment.html
+++ b/employment.html
@@ -16,7 +16,51 @@ use-site-title: true
                     <div class="item">
                         <div class="col-sm-6">
                             <div class="box">
-                                August, 2019 - Present
+                                October, 2019 - Present
+                                <div class="box-sub-title">
+                                    "Asaxiy" LLC
+                                </div>
+                                (Tashkent, Uzbekistan)
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="box_dec">
+                                <h3>Technical director</h3>
+                                <ul class="description">
+                                    <li>Manage technical side of business of company</li>
+                                    <li>Manage online store <a href="https://asaxiy.uz" target="_blank">asaxiy.uz</a></li>
+                                    <li>Suggest and implement solutions</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-sm-6">
+                            <div class="box">
+                                September, 2019 - Present
+                                <div class="box-sub-title">
+                                    "Revolution Team" LLC
+                                </div>
+                                (Tashkent, Uzbekistan)
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="box_dec">
+                                <h3>Founder, CEO</h3>
+                                <ul class="description">
+                                    <li>Work with other IT professionals</li>
+                                    <li>Utilize tools, technology and various methodologies</li>
+                                    <li>Manage all phases of development</li>
+                                    <li>Guide and train developers</li>
+                                    <li>Suggest and implement solutions</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-sm-6">
+                            <div class="box">
+                                August, 2019 - October, 2019
                                 <div class="box-sub-title">
                                     Joint stock commercial bank «Agrobank»
                                 </div>
@@ -39,7 +83,7 @@ use-site-title: true
                     <div class="item">
                         <div class="col-sm-6">
                             <div class="box">
-                                May, 2019 - Present
+                                May, 2019 - September, 2019
                                 <div class="box-sub-title">
                                     IT Step Computer Academy, Tashkent branch
                                 </div>
@@ -80,7 +124,7 @@ use-site-title: true
                     <div class="item">
                         <div class="col-sm-6">
                             <div class="box">
-                                January, 2019 - Present
+                                January, 2019 - November, 2019
                                 <div class="box-sub-title">
                                     Tashkent university of information technologies
                                 </div>
