--- a/education.html
+++ b/education.html
@@ -17,7 +17,25 @@ js: "/js/education.js"
                     <div class="item">
                         <div class="col-sm-6">
                             <div class="box">
-                                2017 - Present
+                                2020, January - Present
+                                <div class="box-sub-title">
+                                    TUIT (Tashkent university of information technologies)
+                                </div>
+                                (Tashkent city)
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="box_dec">
+                                <h3>Doctor of Philosophy (Ph.D.)</h3>
+                                <p class="description">Researcher in the Ph.D. in the direction of "Mathematical and
+                                    software of computers, complexes and computer networks"</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="col-sm-6">
+                            <div class="box">
+                                2017 - 2019
                                 <div class="box-sub-title">
                                     TUIT (Tashkent university of information technologies)
                                 </div>
