new scientific articles added

--- a/education.html
+++ b/education.html
@@ -114,6 +114,36 @@ js: "/js/education.js"
             <h5 class="text-center">Science articles that published in the period of study.</h5>
             <div class="row">
                 <div class="col-md-3 certificate">
+                    <a href="/img/articles/vozmojnosti_texnologii_dopolnennoy_realnosti.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/vozmojnosti_texnologii_dopolnennoy_realnosti.jpg" alt="Возможности технологии дополненной реальности в развитии ностальгического туризма" title="Возможности технологии дополненной реальности в развитии ностальгического туризма">
+                        <p class="certificate-text">Возможности технологии дополненной реальности в развитии ностальгического туризма (page 135)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/omnity_tadqiqotchilar_uchun_qidiruv_tizimi.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/omnity_tadqiqotchilar_uchun_qidiruv_tizimi.jpg" alt="Omnity: tadqiqotchilar uchun samarali ko'p tilli qidiruv tizimi" title="Omnity: tadqiqotchilar uchun samarali ko'p tilli qidiruv tizimi">
+                        <p class="certificate-text">Omnity: tadqiqotchilar uchun samarali ko'p tilli qidiruv tizimi (page 177)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/qidiruv_tizimlarida_bibliografik_evrestika.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/qidiruv_tizimlarida_bibliografik_evrestika.jpg" alt="Qidiruv tizimlarida bibliografik evrestikaning ahamiyati" title="Qidiruv tizimlarida bibliografik evrestikaning ahamiyati">
+                        <p class="certificate-text">Qidiruv tizimlarida bibliografik evrestikaning ahamiyati (page 108)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/umnaya_biblioteka_kak_innovatsionniy.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/umnaya_biblioteka_kak_innovatsionniy.jpg" alt="Almeros.uz - электронная библиотека исторического и культурного наследия узбекистана" title="Almeros.uz - электронная библиотека исторического и культурного наследия узбекистана">
+                        <p class="certificate-text">Almeros.uz - электронная библиотека исторического и культурного наследия узбекистана (page 136)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
+                    <a href="/img/articles/umnaya_biblioteka_kak_innovatsionniy.pdf" target="_blank">
+                        <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/umnaya_biblioteka_kak_innovatsionniy.jpg" alt="Умная библиотека как инновационный подход к развитию исламской культуры" title="Умная библиотека как инновационный подход к развитию исламской культуры">
+                        <p class="certificate-text">Умная библиотека как инновационный подход к развитию исламской культуры (page 66)</p>
+                    </a>
+                </div>
+                <div class="col-md-3 certificate">
                     <a href="/img/articles/samarqand.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/samarqand.jpg" alt="Динамика количества инцидентов информационной безопасности" title="Динамика количества инцидентов информационной безопасности">
                         <p class="certificate-text">Динамика количества инцидентов информационной безопасности (page 171)</p>
@@ -137,8 +167,6 @@ js: "/js/education.js"
                         <p class="certificate-text">Применение инструментов форензики на пути к расследованию инцидентов (page 1)</p>
                     </a>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/shk4.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/shk4.jpg" alt="Стили мышления в освоении технологий программирования в среднем образовательном учреждении" title="Стили мышления в освоении технологий программирования в среднем образовательном учреждении">
@@ -163,8 +191,6 @@ js: "/js/education.js"
                         <p class="certificate-text">Роль таксономия Бенджамина Блума в обучении программированию (page 48)</p>
                     </a>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/uch21vek_3_2_2016.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/uch21vek.jpg" alt="Функции компьютера и компьютеризованное обучение при изучении иностранного языка" title="Функции компьютера и компьютеризованное обучение при изучении иностранного языка">
@@ -189,8 +215,6 @@ js: "/js/education.js"
                         <p class="certificate-text">Xопфилд нейрон тўри асосида тимсолларни таниб олиш масаласи дастурий таъминоти (page 273)</p>
                     </a>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/yosh_olimlar_konferensiyasi_2016_1_qism.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/yosh_olimlar_konferensiyasi_2016_1_qism.jpg" alt="Talabalar bilimini baholashning o'ziga hos usuli" title="Talabalar bilimini baholashning o'ziga hos usuli">
@@ -215,8 +239,6 @@ js: "/js/education.js"
                         <p class="certificate-text">“Dasturlash asoslari” fanidan masala yechish bosqichlarini o'qitish metodikasi (page 337)</p>
                     </a>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-md-3 certificate">
                     <a href="/img/articles/URDU_barkamol_avlod_1.pdf" target="_blank">
                         <img class="certificate-item" src="/img/loader.svg" data-src="/img/articles/URDU_barkamol_avlod.jpg" alt="Tarixiy merosimizning bugungi kundagi qadri" title="Tarixiy merosimizning bugungi kundagi qadri">
